[tool.poetry]
name = "hunter"
version = "0.3.0"
description = ""
authors = ["Piotr Kołaczkowski <pkolaczk@datastax.com>"]

[tool.poetry.dependencies]
dateparser = "^1.0.0"
expandvars = "^0.6.5"
numpy = "1.19"
python = "^3.8"
python-dateutil = "^2.8.1"
signal-processing-algorithms = "^1.3.2"
# 0.15.89 is the highest level fallout-client can use, for python 2 compatibility
# reasons
"ruamel.yaml" = "=0.15.89"
pystache = "^0.5.4"
tabulate = "^0.8.7"
fallout-client = {git = "ssh://git@github.com/riptano/fallout.git"}
black = "^20.8b1"
validators = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytz = "2021.1"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:future",
    "ignore::pytest.PytestCollectionWarning"
]

[tool.poetry.scripts]
hunter = 'hunter.main:main'

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
