[tool.poetry]
name = "hunter"
version = "0.6.0"
description = ""
authors = ["Piotr Kołaczkowski <pkolaczk@datastax.com>"]

[tool.poetry.dependencies]
dateparser = "^1.0.0"
expandvars = "^0.6.5"
numpy = "1.24"
python = ">=3.8,<3.13"
python-dateutil = "^2.8.1"
signal-processing-algorithms = "^1.3.2"
"ruamel.yaml" = "=0.17.21"
requests = "^2.25.1"
pystache = "^0.6.0"
tabulate = "^0.8.7"
validators = "^0.18.2"
slack-sdk = "^3.4.2"
google-cloud-bigquery = "^3.25.0"
pg8000 = "^1.31.2"


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytz = "2021.1"
tox = "^3.25.0"
black = "^22.3.0"
flake8 = "^4.0.1"
autoflake = "^1.4"
isort = "^5.10.1"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:future",
    "ignore::pytest.PytestCollectionWarning"
]

[tool.poetry.scripts]
hunter = 'hunter.main:main'

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
